# django_fortnightly

./: db.sqlite3  manage.py  pyproject.toml
django_fortnightly/: asgi.py  settings.py  urls.py  wsgi.py
support/: admin.py  constants.py  errors.py  forms.py  models.py  urls.py  utils.py  views.py
support/migrations/: 0001_initial.py  0002_alter_ticket_customer_email.py
support/providers/: notifications.py
support/repo/: stuff_users.py  ticket.py
support/services/: ticket_creator.py
templates/support/: index.html  ticket_list.html
