[tool.poetry]
name = "django_fortnightly"
version = "0.1.0"
description = ""
authors = ["Kirill Dvoryashin <dvoryashinks@sibedge.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
